# guios-dm

./: .gitignore  CMakeLists.txt  Makefile  README.md  make.sh  permissions.sh
config/: guios-dm.service
config/etc/X11/: default-display-manager  xorg.conf
src/: main.cpp  main.h
src/launcher/: XorgLauncher.cpp  XorgLauncher.h
src/window/: Colors.cpp  Colors.h  Displayer.cpp  Displayer.h  Manager.cpp  Manager.h
